# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2109 2011/12/21 08:24:48 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.0.beta4 2012-01-??
 - 2011-12-20 Fixed bug#7955 - Customer identity is not displayed on Customer Interface.
 - 2011-12-20 Fixed bug#8035 - SOAP interface does not allow to create/update
    CustomerCompany records.
 - 2011-12-20 Fixed bug#8027 - Duplicated slash in cache subdirectory names.
 - 2011-12-20 Make sure the customer is being returned to ticket search result after using
    'back' link from a ticket he has reached from the search result page.
 - 2011-12-19 Fixed bug#7666 - Queue Preferences potentially slow, thanks to Stefan Bedorf for the patch.
 - 2011-12-19 Updated Polish translation file, thanks to Pawel!
 - 2011-12-16 Fixed Lithuanian language file encoding.
 - 2011-12-16 Added OTRS 2.4-style article colors to the article list in AgentTicketZoom.
    This is disabled by default, enable 'Ticket::UseArticleColors' in SysConfig to use it.

3.1.0.beta3 2011-12-20
 - 2011-12-15 Fixed bug#8012 - Confusing dashboard filter names.
 - 2011-12-14 Fixed bug#8000 - Queues are translated if are displayed in list-style.
 - 2011-12-13 Added feature bug#7893 - Customer Info in TicketZoom can now also list open tickets
    based on CustomerUserLogin rather than CustomerID, and can list closed tickets as well.
 - 2011-12-13 Fixed bug#8020 - Queue list in new move window has the current queue enabled.
 - 2011-12-13 Fixed bug#8017 - After first AJAXUpdate call, MultiSelect DynamicFields gets empty.
 - 2011-12-13 Fixed bug#7999 - Uncheck all services for a customer doesn't work.
 - 2011-12-13 Fixed bug#7005 - JavaScript Init function is executed more than once in TicketZoom.